# Kevin

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  live-deepseek.yml
scripts/: live_smoke.py
src/kevin/: __init__.py  api.py  cli.py  desi_link.py  human_gate.py  layer9.py  layer9_link.py  llm_client.py  method_library.py  models.py  orchestrator.py  real_trial.py  selector.py  solution_space.py  space_predictor.py  trial_runner.py  wild_brother.py
src/kevin/web/: index.html
tests/: conftest.py  test_api.py  test_desi_link.py  test_layer9.py  test_layer9_link.py  test_method_library.py  test_orchestrator.py  test_real_trial.py  test_selector.py  test_solution_space.py  test_space_predictor.py  test_trial_honesty.py  test_trial_runner.py  test_wild_brother.py
