[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kevin"
version = "0.1.0"
description = "Kevin - a creativity-routing architecture: unexplored spaces, wild variation, method transfer, epistemic selection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hanns-Steffen Rentschler" }]
keywords = ["creativity", "method-transfer", "epistemic-selection", "DESi", "Layer-9"]
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0"]
# Predict where the solution spaces are with DESi's real blind-spot coverage
# (used when KEVIN_USE_DESI=1; falls back to in-house set arithmetic otherwise).
desi = ["desi-governance @ git+https://github.com/hstre/DESi"]
web = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2.0", "httpx>=0.27"]
dev = ["pytest>=8.0", "ruff>=0.5", "fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2.0", "httpx>=0.27"]

[project.scripts]
kevin = "kevin.cli:main"
kevin-serve = "kevin.api:serve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kevin = ["web/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
